[package]
name = "opengr2-bevy"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bevy = { version = "0.9.1", default-features = false }
opengr2 = { version = "0.1.0", path = "../opengr2" }
serde = "1.0.152"

[dev-dependencies]
bevy = { version = "0.9.1", default-features = true }
bevy-inspector-egui = "0.17.0"
bevy_flycam = "0.9.0"

[[example]]
name = "granny"
path = "examples/granny.rs"
